update height of text input on small screens and fix issue with word tokenizer and make number type detection conditional on presence of a number

--- a/risk_calculator_standalone/stylefiles/global_styles.css
+++ b/risk_calculator_standalone/stylefiles/global_styles.css
@@ -165,6 +165,10 @@ body {
     .content-container {
         width: 100%;
     }
+
+    .text-input{
+        flex: 20em;
+    }
 }
 
 .container {
